make auth client
